--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <link href="http://fonts.googleapis.com/css?family=Just+Me+Again+Down+Here" rel="stylesheet" type="text/css">
 
-<script src="src/chartlets.js"></script>
+<script src="chartlets.min.js"></script>
 <style>
 .chartlet {
   border: 1px solid #ddd;
