Updated link to repo

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ li strong {
 
 <section id="usage">
   <h3>Usage</h3>
-  <p>1. <a href="https://github.com/adammark/Chartlets/tree/master/src">Download</a> and include <code>&lt;script src="chartlets.min.js"&gt;&lt;/script&gt;.</code></p>
+  <p>1. <a href="https://github.com/adammark/Chartlets">Download</a> and include <code>&lt;script src="chartlets.min.js"&gt;&lt;/script&gt;.</code></p>
   <p>2. Create a <code>&lt;canvas&gt;</code> element with a width, height, and the class name "chartlet." Then add HTML5 data attributes as described below.</p>
   <p>3. Call <code>Chartlets.render()</code>.</p>
 </section>
