--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 
 <title>Chartlets: Tiny charts for tablet and mobile web apps</title>
 
+<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0" />
+<meta name="apple-mobile-web-app-capable" content="yes" />
+<meta name="apple-mobile-web-app-status-bar-style" content="black" />
+
 <link href="http://fonts.googleapis.com/css?family=Just+Me+Again+Down+Here" rel="stylesheet" type="text/css">
 
 <script src="chartlets.min.js"></script>
