--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@ li strong {
   <canvas class="chartlet" data-type="line" data-colors="#fc0 rgba(200,135,12,0.5)" data-range="0 10" data-sets="[2 3 7 6 8 7 6 1 3 7] [5 6 5 3 5 9 8 9 8 5]" width="100" height="55" data-opts="stroke:1 cap:square axis:5"></canvas>
   <canvas class="chartlet" data-type="line" data-colors="#03a" data-sets="[1 2 6 3 7 2 3 3 1 2 3 4 2 3 3 2 3 2 3 5 3 2 3 2]" width="100" height="55" data-opts="stroke:1 shape:step fill:solid"></canvas>
   <canvas class="chartlet" data-type="line" data-colors="hsl(336, 76%, 50%)" data-range="0 15" data-sets="[7 8 7 6 7 9 8 7 8 7 7 6 6 5 6 6 7 8 9 8 7 9 7 9 7 9 8 9 8 9 8 9 8 7 5 4 6]" width="100" height="55" data-opts="stroke:2"></canvas>
+  <canvas class="chartlet" data-type="line" data-colors="#cf0 #fc0" data-range="0 10" data-sets="[1 5 3 9 4] [4 3 9 7 2]" width="100" height="55" data-opts="stroke:3 shape:smooth bgcolor:#006"></canvas>
 </section>
 
 <section id="showcase-bar">
@@ -180,7 +181,7 @@ li strong {
         <td><code>&lt;canvas class="chartlet" data-type="line" data-colors="#ffcc00 #ff66cc" data-range="0 10" data-sets="[1 5 3 9 4] [4 3 9 7 2]" width="100" height="55" data-opts="stroke:2 shape:smooth cap:circle"&gt;&lt;/canvas&gt;</code></td>
       </tr>
       <tr>
-        <td><canvas class="chartlet" data-type="line" data-colors="hsla(319,83%,65%) hsl(200,83%,50%)" data-sets="[10 15 10 16 20 15 16 14 9] [5 12 15 20 14 -2 -5 8 15]" width="100" height="55" data-opts="stroke:1 fill:solid axis:0"></canvas></td>
+        <td><canvas class="chartlet" data-type="line" data-colors="hsl(319,83%,65%) hsl(200,83%,50%)" data-sets="[10 15 10 16 20 15 16 14 9] [5 12 15 20 14 -2 -5 8 15]" width="100" height="55" data-opts="stroke:1 fill:solid axis:0"></canvas></td>
         <td><code>&lt;canvas class="chartlet" data-type="line" data-colors="hsla(319,83%,65%) hsl(200,83%,50%)" data-sets="[10 15 10 16 20 15 16 14 9] [5 12 15 20 14 -2 -5 8 15]" width="100" height="55" data-opts="stroke:1 fill:solid axis:0"&gt;&lt;/canvas&gt;</code></td>
       </tr>
       <tr>
@@ -202,6 +203,10 @@ li strong {
       <tr>
         <td><canvas class="chartlet" data-type="pie" data-sets="[1 2 3 4 5]" width="65" height="65" data-opts="theme:money"></canvas></td>
         <td><code>&lt;canvas class="chartlet" data-type="pie" data-sets="[1 2 3 4 5]" width="65" height="65" data-opts="theme:money"&gt;&lt;/canvas&gt;</code></td>
+      </tr>
+      <tr>
+        <td><canvas class="chartlet" data-type="pie" data-colors="#ED729D #72CAED" d data-sets="[2 4]" width="85" height="65" data-opts="bgcolor:#003"></canvas></td>
+        <td><code>&lt;canvas class="chartlet" data-type="pie" data-colors="#ED729D #72CAED" data-sets="[1 2 3 4 5]" width="85" height="65" data-opts="bgcolor:#003"&gt;&lt;/canvas&gt;</code></td>
       </tr>
     </tbody>
   </table>
