Fixed sample code

--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@ li strong {
         <td><code>&lt;canvas class="chartlet" data-type="pie" data-sets="[1 2 3 4 5]" width="65" height="65" data-opts="theme:money"&gt;&lt;/canvas&gt;</code></td>
       </tr>
       <tr>
-        <td><canvas class="chartlet" data-type="pie" data-colors="#ED729D #72CAED" d data-sets="[2 4]" width="85" height="65" data-opts="bgcolor:#003"></canvas></td>
-        <td><code>&lt;canvas class="chartlet" data-type="pie" data-colors="#ED729D #72CAED" data-sets="[1 2 3 4 5]" width="85" height="65" data-opts="bgcolor:#003"&gt;&lt;/canvas&gt;</code></td>
+        <td><canvas class="chartlet" data-type="pie" data-colors="#ED729D #72CAED" data-sets="[2 4]" width="85" height="65" data-opts="bgcolor:#003"></canvas></td>
+        <td><code>&lt;canvas class="chartlet" data-type="pie" data-colors="#ED729D #72CAED" data-sets="[2 4]" width="85" height="65" data-opts="bgcolor:#003"&gt;&lt;/canvas&gt;</code></td>
       </tr>
     </tbody>
   </table>
