Allowed word wrapping on code blocks

--- a/index.html
+++ b/index.html
@@ -102,7 +102,11 @@ li strong {
 
 @media only screen and (max-width: 480px) {
   body {
-    padding: 10px;
+    padding: 8px;
+  }
+  code, pre {
+    white-space: pre-wrap;
+    word-break: break-all;
   }
   td, th {
     padding: 2px;
