Added transition tests

--- a/test/work.html
+++ b/test/work.html
@@ -16,7 +16,7 @@ canvas {
 
 <body>
 
-<canvas id="test_1" class="chartlet" data-type="line" data-sets="[1 2 3 4 5 6 7 8 9 10] [10 9 8 7 6 5 4 3 2 1]" data-colors="#f00 #00f" width="150" height="55"></canvas>
+<canvas id="test_1" class="chartlet" data-type="line" data-sets="[1 2 3 4 5 6 7 8 9 10] [10 9 8 7 6 5 4 3 2 1]" data-colors="#f00 #00f" width="150" height="55" data-opts="cap:circle"></canvas>
 <button onclick="update('test_1')">update</button>
 
 <canvas id="test_2" class="chartlet" data-type="line" data-sets="" data-colors="#fc0 #0cf" width="150" height="55"></canvas>
@@ -25,8 +25,11 @@ canvas {
 <canvas id="test_3" class="chartlet" data-type="bar" data-sets="[1 2 3 4 5 6 7 8 9 10] [10 9 8 7 6 5 4 3 2 1]" data-colors="#f00 #00f" width="150" height="55"></canvas>
 <button onclick="update('test_3')">update</button>
 
-<canvas id="test_4" class="chartlet" data-type="pie" data-sets="[1 2 3 4 5 6 7 8 9 10] [10 9 8 7 6 5 4 3 2 1]" data-colors="#f00 #00f #fc0 #cf0" width="75" height="75"></canvas>
+<canvas id="test_4" class="chartlet" data-type="bar" data-sets="[1 2 3 4 5 6 7 8 9 10] [10 9 8 7 6 5 4 3 2 1]" data-colors="#f00 #00f" width="150" height="55" data-opts="transform:stack"></canvas>
 <button onclick="update('test_4')">update</button>
+
+<canvas id="test_5" class="chartlet" data-type="pie" data-sets="[1 2 3 4 5 6 7 8 9 10] [10 9 8 7 6 5 4 3 2 1]" data-colors="#f00 #00f #fc0 #cf0 #3aa #900 #090 #ccc #ddd #666" width="75" height="75"></canvas>
+<button onclick="update('test_5')">update</button>
 
 <script>
 Chartlets.render();
