--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
+<!DOCTYPE html>
 <html>
 
 <head>
 
 <title>Chartlets: Tiny charts for tablet and mobile web apps</title>
 
+<meta name="description" content="Chartlets: Tiny charts for tablet and mobile web apps" />
 <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0" />
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="apple-mobile-web-app-status-bar-style" content="black" />
