--- a/test/work.html
+++ b/test/work.html
@@ -37,13 +37,19 @@ canvas {
 <canvas id="test_7" class="chartlet" data-type="pie" data-sets="[1 2 3 4 5 6 7 8 9 10] [10 9 8 7 6 5 4 3 2 1]" data-colors="#9351a4 #ff99cc #e31a1c #66cdaa #ffcc33 #f92830 #2fb4b1 #ffa839 #3375cd #5fd1d5" width="75" height="75"></canvas>
 <button onclick="update('test_7')">update</button>
 
+<br>
+<br>
+<br>
+
+<button onclick="updateAll()">update all</button>
+
 <script>
 Chartlets.render();
 
-var a = [2, 3, 5, 3, 6, 3, 7, 8, 4, 2];
-var b = [8, 3, 4, 7, 2, 7, 2, 4, 6, 1];
-
 function update(id) {
+  var a = [];
+  var b = [];
+
   for (var i = 0; i < 10; i++) {
     a[i] = Math.ceil(Math.random() * 9);
     b[i] = Math.ceil(Math.random() * 9);
@@ -52,6 +58,13 @@ function update(id) {
   Chartlets.update(id, [a, b], { transition: "linear" });
 }
 
+function updateAll() {
+  var elems = document.getElementsByClassName("chartlet");
+
+  for (var i = 0; i < elems.length; i++) {
+  	update(elems[i].id);
+  }
+}
 </script>
 
 
