First pass at banded line chart

--- a/test/work.html
+++ b/test/work.html
@@ -37,6 +37,9 @@ canvas {
 <canvas id="test_7" class="chartlet" data-type="pie" data-sets="[1 2 3 4 5 6 7 8 9 10] [10 9 8 7 6 5 4 3 2 1]" data-colors="#9351a4 #ff99cc #e31a1c #66cdaa #ffcc33 #f92830 #2fb4b1 #ffa839 #3375cd #5fd1d5" width="75" height="75"></canvas>
 <button onclick="update('test_7')">update</button>
 
+<canvas id="test_8" class="chartlet" data-type="line" data-sets="[1 2 3 2 3 4 3 2 2 1] [5 7 8 9 5 8 9 8 9 6]" data-colors="#f00 #00f" width="150" height="55" data-opts="transform:band"></canvas>
+<button onclick="update('test_8')">update</button>
+
 <br>
 <br>
 <br>
