Minor copy edits

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ li strong {
   <h3>What are Chartlets?</h3>
   <p>Chartlets are tiny charts without grids or legends, like <a href="http://en.wikipedia.org/wiki/Sparklines">Sparklines</a>. They're perfect for conveying simple relationships or trends, especially when space is scarce.</p>
   <p>Yes, legends are important. With Chartlets, you can create your own legends in HTML and present them in a way that makes sense for your app. A single legend can apply to multiple Chartlets in order to conserve space and improve readability.</p>
-  <p>The Chartlets JavaScript library uses the HTML5 canvas element and is only 2.8k when minified and gzipped. It has no dependencies.</p>
+  <p>Chartlets uses the HTML5 <code>&lt;canvas&gt;</code> element and is just 2.8k when minified and gzipped. It has no dependencies.</p>
 </section>
 
 <section id="usage">
@@ -436,7 +436,7 @@ setInterval(function() {
     <li><p>You can apply additional styles to the <code>&lt;canvas&gt;</code> element with CSS. For example: <code>.chartlet { border: 1px solid #ddd; }</code></p></li>
     <li><p>At this time, positive and negative values cannot be comingled in a stacked bar chart or stacked line chart.</p></li>
     <li><p>For older browsers that don't support the <code>&lt;canvas&gt;</code> element, consider a <a href="https://github.com/Modernizr/Modernizr/wiki/HTML5-Cross-Browser-Polyfills#canvas">polyfill</a>.</p></li> 
-    <li><p>For larger, canvas-based charts, consider <a href="http://www.chartjs.org/">Chart.js</a>. For interactive, SVG-based charts, consider <a href="http://d3js.org/">D3</a>.</p></li>
+    <li><p>For larger, canvas-based charts, consider <a href="http://www.chartjs.org/">Chart.js</a>. For interactive, SVG-based charts, consider <a href="http://d3js.org/">D3.js</a>.</p></li>
     <li><p>Bugs or requests? Please <a href="https://github.com/adammark/Chartlets/issues?state=open">submit an issue</a>.</p></li>
   </ul>
 </section>
