--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ li strong {
   <h3>What are Chartlets?</h3>
   <p>Chartlets are tiny charts without grids or legends, like <a href="http://en.wikipedia.org/wiki/Sparklines">Sparklines</a>. They're perfect for conveying simple relationships or trends, especially when space is scarce.</p>
   <p>Yes, legends are important. With Chartlets, you can create your own legends in HTML and present them in a way that makes sense for your app. A single legend can apply to multiple Chartlets in order to conserve space and improve readability.</p>
-  <p>Chartlets uses the HTML5 <code>&lt;canvas&gt;</code> element and is just 2.8k when minified and gzipped. It has no dependencies.</p>
+  <p>Chartlets uses the HTML5 <a href="http://diveintohtml5.info/canvas.html"><code>&lt;canvas&gt;</code></a> element and is only 2.8k when minified and gzipped. It has no dependencies.</p>
 </section>
 
 <section id="usage">
