Updated brick examples

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ li strong {
   <h3>Custom charts</h3>
   <canvas class="chartlet" data-type="brick" data-sets="[30 20 10]" data-colors="#e00 #0c0 #fc0" width="70" height="70"></canvas>
   <canvas class="chartlet" data-type="brick" data-sets="[10 20 30 40]" data-opts="theme:party" width="70" height="70"></canvas>
-  <canvas class="chartlet" data-type="brick" data-sets="[5 10 10]" data-opts="theme:blues" width="70" height="70"></canvas>
+  <canvas class="chartlet" data-type="brick" data-sets="[20 10 5]" data-opts="theme:blues shape:circle" width="70" height="70"></canvas>
 </section>
 
 <header id="docs">
