Checkpoint - donut chart

--- a/test/work.html
+++ b/test/work.html
@@ -32,6 +32,8 @@ canvas {
 
 <canvas id="test_7" class="chartlet" data-type="pie" data-sets="[1 2 3 4 5 6 7 8 9 10]" data-colors="#9351a4 #ff99cc #e31a1c #66cdaa #ffcc33 #f92830 #2fb4b1 #ffa839 #3375cd #5fd1d5" width="75" height="75"></canvas>
 
+<canvas id="test_7a" class="chartlet" data-type="donut" data-sets="[1 2 3 4 5 6 7 8 9 10]" data-colors="#9351a4 #ff99cc #e31a1c #66cdaa #ffcc33 #f92830 #2fb4b1 #ffa839 #3375cd #5fd1d5" width="75" height="75"></canvas>
+
 <canvas class="chartlet" data-type="brick" data-sets="[100 200 300]" data-colors="#e00 #0c0 #ddd" width="100" height="100"></canvas>
 
 <canvas class="chartlet" data-type="brick" data-sets="[1000 1000 1000]" data-colors="#e00 #0c0 #ddd" data-opts="shape:circle" width="100" height="100"></canvas>
