--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@ li strong {
 <section id="updating">
   <h3>Updating Data</h3>
 
-  <p>The <code>update</code> method helps you re-render charts with new data or simply drop in default data after it is loaded. Below, the <code>&lt;canvas&gt;</code> element with ID <code>"demo1"</code> is updated with new values every 500ms.</p>
+  <p>The <code>update</code> method helps you re-render charts with new data (or populate charts with data from an AJAX request). It accepts an element (or element ID) and an array of data sets. Below, the <code>&lt;canvas&gt;</code> element with ID <code>"demo1"</code> is updated with new values every 500ms.</p>
 
   <canvas class="chartlet" id="demo1" data-type="line" data-colors="#ffcc00 #ff66cc" data-range="0 10" data-sets="[2 3 5 3 6 3 7 8 4 2] [8 3 4 7 2 7 2 4 6 1]" width="150" height="55" data-opts="stroke:2 shape:smooth"></canvas>
 
